fix overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -89,6 +89,7 @@ background-image: linear-gradient(to right bottom, #91D24A 40%, #8DC54F 74%);
     margin: 0 auto 90px;
     max-width: 640px;
     padding: 0 20px;
+    word-wrap: break-word;
 }
 
 p {
